кэширование + docker compose
