# api/service.go
@@ -38,6 +38,11 @@ func (s Service) CreateTrack(song, group string) (code int) {
 		return
 	}
 
+	prefix := fmt.Sprintf("ReadAll:GroupName=%s:Song=%s:ReleaseDate=%s:Link=%s:Lyrics=%s", track.Group_name, track.Song, track.Release_date, track.Link, track.Song_lyrics)
+	s.caching.DelKeysWithPrefix(prefix)
+	prefix = "ReadAll:GroupName=:Song=:ReleaseDate=:Link=:Lyrics="
+	s.caching.DelKeysWithPrefix(prefix)
+
 	code = 201
 	return
 }
@@ -154,6 +159,13 @@ func (s Service) DeleteTrack(song, group string) (code int) {
 		return
 	}
 
+	prefix := fmt.Sprintf("ReadAll:GroupName=%s:Song=%s", group, song)
+	s.caching.DelKeysWithPrefix(prefix)
+	prefix = fmt.Sprintf("ReadTrackLyrics:GroupName=%s:Song=%s", group, song)
+	s.caching.DelKeysWithPrefix(prefix)
+	prefix = "ReadAll:GroupName=:Song=:ReleaseDate=:Link=:Lyrics="
+	s.caching.DelKeysWithPrefix(prefix)
+
 	code = 204
 	return
 }
@@ -171,56 +183,14 @@ func (s Service) UpdateTrack(song, group string, newData models.Track) (code int
 		return
 	}
 
+	prefix := fmt.Sprintf("ReadAll:GroupName=%s:Song=%s", group, song)
+	s.caching.DelKeysWithPrefix(prefix)
+	prefix = fmt.Sprintf("ReadTrackLyrics:GroupName=%s:Song=%s", group, song)
+	s.caching.DelKeysWithPrefix(prefix)
+	prefix = "ReadAll:GroupName=:Song=:ReleaseDate=:Link=:Lyrics="
+	s.caching.DelKeysWithPrefix(prefix)
+
 	code = 204
-	return
-}
-
-/*
-type SongDetail struct {
-	ReleaseDate string `json:"releaseDate" redis:"releaseDate"`
-	Text        string `json:"text" redis:"text"`
-	Link        string `json:"link" redis:"link"`
-}
-*/
-
-func (s Service) ReadInfo(filter models.Track) (info models.SongDetail, code int) {
-	query := fmt.Sprintf("ReadAll:GroupName=%s:Song=%s:ReleaseDate=%s:Link=%s:Lyrics=%s", filter.Group_name, filter.Song, filter.Release_date, filter.Link, filter.Song_lyrics)
-	cach, err := s.caching.HGet(query)
-	if err == nil {
-		s.debugLog.Println("Кэш найден!")
-		fmt.Println(cach)
-		cachObj := models.SongDetail{ReleaseDate: cach["releaseDate"], Text: cach["text"], Link: cach["link"]}
-		return cachObj, 200
-	} else {
-		s.debugLog.Printf("Кэш не найден:%v\n", err)
-	}
-
-	res, err := s.dao.Read([]string{"*"}, &filter, 0, 1)
-	if err != nil {
-		code = 500
-		s.debugLog.Println(err.Error())
-		return
-	} else if len(res) == 0 {
-		code = 404
-		s.debugLog.Println("Данные не найдены: 404")
-		return
-	}
-
-	t := res[0]
-
-	info = models.SongDetail{ReleaseDate: t.Release_date, Text: t.Song_lyrics, Link: t.Link}
-	var date time.Time
-	date, err = time.Parse("2006-01-02T15:04:05Z", info.ReleaseDate)
-	if err != nil {
-		code = 500
-		s.debugLog.Println("Неудачный парсинг даты")
-		return
-	}
-	info.ReleaseDate = date.Format("2006-01-02")
-
-	s.caching.HSet(query, info)
-
-	code = 200
 	return
 }
 
